# embedded-rust-bootcamp

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci_checks.yml
book/: book.toml
book/src/: SUMMARY.md
book/src/intro/: index.md  installation.md
book/src/intro/install/: linux.md
src/: dive_computer.rs  lib.rs  main.rs
