[package]
authors = ["Hmvp"]
edition = "2021"
readme = "README.md"
name = "dive-computer"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.1.2"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"
embedded-graphics = "0.7.1"
fugit = "0.3.5"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

pimoroni-pico-explorer = { version = "0.4.0" }

arraystring = { version = "0.3.0", default-features = false }
num = { version = "0.4.0", default-features = false }
rp2040-monotonic = "1.1.0"

[dev-dependencies]
log = "0.4.17"

[features]
default = ["defmt-default"]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3           # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3           # <-
overflow-checks = false # <-
